Ingresar cantidad de minas, Identificar las casillas, Boton para colocar Bandera, Ganar Juego con Banderas, Guardar y recuperar Juego, y mostrar icono de minas